[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = ["addresses", "lockbox"]

resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["MagicBlock Maintainers <maintainers@magicblock.gg>"]
repository = "https://github.com/magicblock-labs/conjunto"
homepage = "https://www.magicblock.gg"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.80"
conjunto_addresses = { path = "addresses" }
conjunto_lockbox = { path = "lockbox" }
paste = "1.0"
solana-rpc-client = "1.18.12"
solana-rpc-client-api = "1.18.12"
solana-sdk = "1.18.12"
thiserror = "1.0.60"
tokio = "1.37.0"
