[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
  "addresses",
  "core",
  "director",
  "director-pubsub",
  "director-rpc",
  "guidepoint",
  "lockbox",
  "providers",
  "test-tools",
  "transwise",
]

resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["MagicBlock Maintainers <maintainers@magicblock.gg>"]
repository = "https://github.com/magicblock-labs/conjunto"
homepage = "https://www.magicblock.gg"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.80"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
conjunto-addresses = { path = "addresses" }
conjunto-core = { path = "core" }
conjunto-lockbox = { path = "lockbox" }
conjunto-director-pubsub = { path = "director-pubsub" }
conjunto-director-rpc = { path = "director-rpc" }
conjunto-guidepoint = { path = "guidepoint" }
conjunto-providers = { path = "providers" }
conjunto-test-tools = { path = "test-tools" }
conjunto-transwise = { path = "transwise" }
env_logger = "0.11.3"
futures-util = "0.3.30"
# Needed for (not yet working CORS)
hyper = "1.3.1"
jsonrpsee = { version = "0.22.5", features = ["http-client"] }
log = "0.4.21"
paste = "1.0"
serde = "1.0.201"
serde_json = "1.0.117"
solana-account-decoder = "1.18.12"
solana-rpc-client = "1.18.12"
solana-rpc-client-api = "1.18.12"
solana-sdk = "1.18.12"
solana-transaction-status = "1.18.12"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "io-util"] }
# Needed for (not yet working CORS)
tower = { version = "0.4.13" }
# Needed for (not yet working CORS)
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.0"
