[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
  "addresses",
  "core",
  "director",
  "director-pubsub",
  "director-rpc",
  "guidepoint",
  "lockbox",
  "providers",
  "test-tools",
  "transwise",
]

resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["MagicBlock Maintainers <maintainers@magicblock.gg>"]
repository = "https://github.com/magicblock-labs/conjunto"
homepage = "https://www.magicblock.gg"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.80"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
conjunto-addresses = { path = "addresses" }
conjunto-core = { path = "core" }
conjunto-lockbox = { path = "lockbox" }
conjunto-director-pubsub = { path = "director-pubsub" }
conjunto-director-rpc = { path = "director-rpc" }
conjunto-guidepoint = { path = "guidepoint" }
conjunto-providers = { path = "providers" }
conjunto-test-tools = { path = "test-tools" }
conjunto-transwise = { path = "transwise" }
env_logger = "0.11.3"
futures-util = "0.3.30"
# Needed for (not yet working CORS)
hyper = "1.3.1"
jsonrpsee = { version = "0.22.5", features = ["http-client"] }
log = "0.4.21"
paste = "1.0"
serde = "1.0.201"
serde_json = "1.0.117"
solana-account-decoder = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-account-decoder", version = "1.19.0" }
solana-rpc-client = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-rpc-client", version = "1.19.0" }
solana-rpc-client-api = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-rpc-client-api", version = "1.19.0" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-sdk", version = "1.19.0" }
solana-transaction-status = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-transaction-status", version = "1.19.0" }
solana-zk-token-sdk = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-zk-token-sdk", version = "1.19.0" }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "io-util"] }
# Needed for (not yet working CORS)
tower = { version = "0.4.13" }
# Needed for (not yet working CORS)
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.0"

[patch.crates-io]
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
solana-program = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-program", version = "1.19.0" }
solana-zk-token-sdk = { git = "https://github.com/solana-labs/solana", rev = "30adda4a71", package = "solana-zk-token-sdk", version = "1.19.0" }
