[package]
name = "conjunto-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
