[package]
name = "conjunto-director-pubsub"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
conjunto-addresses = { workspace = true }
conjunto-core = { workspace = true }
conjunto-guidepoint = { workspace = true }
conjunto-providers = { workspace = true }
log = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-rpc-client-api = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
conjunto-test-tools = { workspace = true }
solana-sdk = { workspace = true }
