[package]
name = "conjunto-director"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
conjunto-director-pubsub = { workspace = true }
conjunto-director-rpc = { workspace = true }
conjunto-providers = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
