[package]
name = "conjunto-lockbox"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bytemuck = { workspace = true }
conjunto-addresses = { workspace = true }
conjunto-core = { workspace = true }
conjunto-providers = { workspace = true }
magicblock-delegation-program = { workspace = true }
serde = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
conjunto-test-tools = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
