[package]
name = "conjunto-test-tools"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto-core = { workspace = true }
solana-sdk = { workspace = true }
