[package]
name = "conjunto-transwise"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
conjunto-core = { workspace = true }
conjunto-lockbox = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
conjunto-test-tools = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
