[package]
name = "conjunto-transwise"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
conjunto-core = { workspace = true }
conjunto-lockbox = { workspace = true }
conjunto-providers = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
conjunto-test-tools = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
